14 Sep 2003 mipsator
 * made Makefile more portable.

# snapshot 0.6.3

14 Sep 2003 mipsator
 * finished global language support.
 * fixed parsing of bool data in compatibility mode.
 * added parse_pmkconf(), a common configuration file parser (pmk.conf).
 * added process_opt() and modified pmk to use parse_pmkconf().
 * removed read_conf() which is now useless in pmk.
 * added check_opt() and modified pmksetup to use parse_pmkconf().
 * removed parse_conf() which is now useless in pmksetup.
 * updated pmkfile.5 and pmk.conf.5 man pages.
 * updated override file sample.

13 Sep 2003 mipsator
 * added dumping of pmk.conf in test_pmksetup target of Makefile.
 * added parse_obsolete() for pmk.conf compatibility with old format.
 * modified parse_opt() to check a list of operator instead of
	'=' by default. This permit to use it from pmksetup and pmk.
 * updated read_conf() and parse_conf() to use parse_opt().
 * defined write format for pmk.conf in pmksetup.h
	(see PMKSTP_WRITE_FORMAT).

11 Sep 2003 mipsator
 * added bool object in pmk objects.
 * added bool object support in parser.
 * updated require_check() to support bool object.
 * updated pmkfile.
 * fixed pmkfile sample.
 * rewritten str_to_def() to have full compatibility with autoconf.

10 Sep 2003 mipsator
 * added parse_key() and parse_data() to enforce syntax checking.
 * removed parse_word which became useless.
 * added warning for AC_COMPAT and TARGET to mark them as obsolete.
 * misc cosmetics in pmkfile sample.

# snapshot 0.6.2

06 Sep 2003 mipsator
 * more stuff to permit node command (i will explain later).
 * modified parse_cell() and prscell_init() to meet our current goal.
 * added more stuff again for node command.
 * finished node command stuff.
 * enabled SETTINGS command.
 * converted DEFINE command as node.
 * defined values can contain variable.
 * added some support for global language.
 * updated pmkfile.sample and pmkscan.dat to new format.