@@ -83,70 +83,6 @@ bool get_line(FILE *fd, char *line, int lsize) {
 }
 
 /*
-	Parses a given line.
-     
-	line: line to parse
-	linenum: line number
-	opts: struct where where we store the key->value data   
-
-	returns:  0 on success
-		 -1 on failure
-*/
-
-int parse_conf_line(char *line, int linenum, cfg_opt *opts) {
-	char	*pkey,
-		*pval;
-	int	 sk,
-		 sv,
-		 found_op = 0;
-
-	sk = sizeof(opts->key);
-	sv = sizeof(opts->val);
-	pkey = opts->key;
-	pval = opts->val;
-	while (*line != CHAR_EOS) {
-		if (found_op == 0) {
-			if ((*line == CHAR_ASSIGN_UPDATE) || (*line == CHAR_ASSIGN_STATIC)) {
-				/* operator found, terminate key and copy key name in struct */
-				found_op = 1;
-				*pkey = CHAR_EOS;
-
-				/* set operator in struct */
-				opts->opchar = *line;
-			} else {
-				*pkey = *line;
-				pkey++;
-				sk--;
-				if (sk == 0) {
-					/* too small, cannot store key name */
-					errorf_line(PREMAKE_CONFIG_PATH, linenum, "key name too long.");
-					return(-1);
-				}
-			}
-		} else {
-			*pval = *line;
-			pval++;
-			sv--;
-			if (sv == 0) {
-				/* too small, cannot store key value */
-				errorf_line(PREMAKE_CONFIG_PATH, linenum, "key value too long.");
-				return(-1);
-			}
-		}
-		line++;
-	}
-	if (found_op == 1) {
-		/* line parsed without any error */
-		*pval = CHAR_EOS;
-		return(0);			
-	} else {
-		/* missing operator */
-		errorf_line(PREMAKE_CONFIG_PATH, linenum, "operator not found.");
-		return(-1);
-	}
-}
-
-/*
 	put env variable in an option
 
 	env_name : variable name
